{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 71,
  "lineage": "8cf8d5c3-4402-6056-0f40-d708bb52d79a",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04315148b0fe1aeb7",
            "arn": "arn:aws:ec2:us-east-1:133052085872:elastic-ip/eipalloc-04315148b0fe1aeb7",
            "association_id": "eipassoc-0c6fc08d8e8811334",
            "domain": "vpc",
            "id": "eipalloc-04315148b0fe1aeb7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08d17e1f03c3a86d8",
            "private_dns": "ip-10-0-1-197.ec2.internal",
            "private_ip": "10.0.1.197",
            "public_dns": "ec2-34-206-250-108.compute-1.amazonaws.com",
            "public_ip": "34.206.250.108",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:133052085872:internet-gateway/igw-092b8330418e312cc",
            "id": "igw-092b8330418e312cc",
            "owner_id": "133052085872",
            "tags": {
              "Name": "vsm-dev-igw"
            },
            "tags_all": {
              "Name": "vsm-dev-igw"
            },
            "vpc_id": "vpc-0b9b9d54b90aa291e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04315148b0fe1aeb7",
            "association_id": "eipassoc-0c6fc08d8e8811334",
            "connectivity_type": "public",
            "id": "nat-0adcfd20bab1c7539",
            "network_interface_id": "eni-08d17e1f03c3a86d8",
            "private_ip": "10.0.1.197",
            "public_ip": "34.206.250.108",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04217e5468d4418de",
            "tags": {
              "Name": "vsm-dev-nat"
            },
            "tags_all": {
              "Name": "vsm-dev-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:133052085872:route-table/rtb-0f95ce1d154c8648b",
            "id": "rtb-0f95ce1d154c8648b",
            "owner_id": "133052085872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0adcfd20bab1c7539",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vsm-dev-private-rt"
            },
            "tags_all": {
              "Name": "vsm-dev-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9b9d54b90aa291e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:133052085872:route-table/rtb-09ad9a21ff4119651",
            "id": "rtb-09ad9a21ff4119651",
            "owner_id": "133052085872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-092b8330418e312cc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vsm-dev-public-rt"
            },
            "tags_all": {
              "Name": "vsm-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9b9d54b90aa291e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073413a5bc8715d94",
            "route_table_id": "rtb-0f95ce1d154c8648b",
            "subnet_id": "subnet-027b66fe37746e919"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a28dc8ebb1df266",
            "route_table_id": "rtb-0f95ce1d154c8648b",
            "subnet_id": "subnet-0781ba9cfb89fc543"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7ba726c1db27388",
            "route_table_id": "rtb-09ad9a21ff4119651",
            "subnet_id": "subnet-04217e5468d4418de"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09024b4e87a49fd72",
            "route_table_id": "rtb-09ad9a21ff4119651",
            "subnet_id": "subnet-0a4a3bb0c32de8fdd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:133052085872:subnet/subnet-027b66fe37746e919",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027b66fe37746e919",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "133052085872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vsm-dev-private-0"
            },
            "tags_all": {
              "Name": "vsm-dev-private-0"
            },
            "vpc_id": "vpc-0b9b9d54b90aa291e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:133052085872:subnet/subnet-0781ba9cfb89fc543",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0781ba9cfb89fc543",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "133052085872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vsm-dev-private-1"
            },
            "tags_all": {
              "Name": "vsm-dev-private-1"
            },
            "vpc_id": "vpc-0b9b9d54b90aa291e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:133052085872:subnet/subnet-04217e5468d4418de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04217e5468d4418de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "133052085872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vsm-dev-public-0"
            },
            "tags_all": {
              "Name": "vsm-dev-public-0"
            },
            "vpc_id": "vpc-0b9b9d54b90aa291e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:133052085872:subnet/subnet-0a4a3bb0c32de8fdd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4a3bb0c32de8fdd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "133052085872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vsm-dev-public-1"
            },
            "tags_all": {
              "Name": "vsm-dev-public-1"
            },
            "vpc_id": "vpc-0b9b9d54b90aa291e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:133052085872:vpc/vpc-0b9b9d54b90aa291e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a3dfa2c5b3fb1231",
            "default_route_table_id": "rtb-09fcc3b6f788dbe82",
            "default_security_group_id": "sg-026c7b529c7270165",
            "dhcp_options_id": "dopt-08a1602a969ca0b01",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b9b9d54b90aa291e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09fcc3b6f788dbe82",
            "owner_id": "133052085872",
            "tags": {
              "Name": "vsm-dev-vpc"
            },
            "tags_all": {
              "Name": "vsm-dev-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}